--- a/vue-ui/public/index.html
+++ b/vue-ui/public/index.html
@@ -4,8 +4,13 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>hello-world</title>
+    <meta name="Description" content="A video portfolio to showcase the projects of Angel Gutierrez">
+
+    <link rel="icon" href="<%= BASE_URL %>video-camera.png" sizes="16x16">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link href="https://fonts.googleapis.com/css?family=Strait" rel="stylesheet">
+
+    <title>Angel Gutierrez</title>
   </head>
   <body>
     <noscript>
