--- a/gfilms-ui/index.html
+++ b/gfilms-ui/index.html
@@ -3,10 +3,14 @@
 
 <head>
   <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <link rel="icon" type="image/png" href="/static/favicon.png"/>
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <meta name="Description" content="A video portfolio to showcase the projects of Angel Gutierrez">
+
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Strait" rel="stylesheet">
-  <title>gfilms-ui</title>
+  <title>Angel Gutierrez</title>
 </head>
 
 <body>
