--- a/gfilms-ui/index.html
+++ b/gfilms-ui/index.html
@@ -7,9 +7,6 @@
   <link rel="icon" type="image/png" href="/static/favicon.png"/>
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <meta name="Description" content="A video portfolio to showcase the projects of Angel Gutierrez">
-
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Strait" rel="stylesheet">
   <title>Angel Gutierrez</title>
 </head>
 
@@ -17,5 +14,13 @@
   <div id="app"></div>
   <!-- built files will be auto injected -->
 </body>
+<script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
+<script>
+  WebFont.load({
+    google: {
+      families: ['Material Icons', 'Strait']
+    }
+  });
+</script>
 
 </html>
